--- a/medmap_frontend/src/components/styles/PharmacyProfile.css
+++ b/medmap_frontend/src/components/styles/PharmacyProfile.css
@@ -163,6 +163,14 @@
   padding-left: 20px;
   box-sizing: border-box;
 }
+.edit-button {
+  background-color: blue;
+  color: #fff;
+  border: none;
+  padding: 8px 16px;
+  border-radius: 5px;
+  cursor: pointer;
+}
 
 
 
